test/fail/ifexpr44.v3
//@execute 0='s'; 1=!NullCheckException; 2='r'
def main(a: int) -> int {
	var x = if((a & 1) == 0, ["string"], [null]);
	return x[0][a];
}
